--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   font-weight: 400;
   font-family: sans-serif;
   background:#103040;
+  padding: 0;
+  margin: 0;
   
 }
 
@@ -15,40 +17,6 @@ body, html, .App, #root, .outer {
   width: 100%;
   height: 100%;
   background:#103040;
-}
-
-.navbar-light {
-  background-color: #103040 !important;
-  /* box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2); */
-}
-
-.outer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.inner {
-  width: 450px;
-  margin: auto;
-  background: #ffffff;
-  
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 40px 55px 45px 55px;
-  border-radius: 15px;
-  transition: all .3s;
-}
-
-.outer .form-control:focus {
-  border-color: #167bff;
-  box-shadow: none;
-}
-
-.outer h3 {
-  text-align: center;
-  margin: 0;
-  line-height: 1;
-  padding-bottom: 20px;
 }
 
 .custom-control-label {
