--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 body, html, .App, #root, .outer {
   width: 100%;
   height: 100%;
-  background:#103040;
+  background:#f5f5f5;
 }
 
 .custom-control-label {
